--- a/evalPCA_step_by_step_example_with_Chen&Story_PCA.ipynb
+++ b/evalPCA_step_by_step_example_with_Chen&Story_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6IVFc1Q0+x4uN96+5rDg9",
+      "authorship_tag": "ABX9TyMZ16Po9mKfQodD2azx83dD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 78,
       "metadata": {
         "id": "BEk0LR56HD0J"
       },
@@ -87,9 +87,9 @@
           "height": 260
         },
         "id": "I-waR1K0HjMG",
-        "outputId": "f3df4d08-2674-47db-fcfd-cdd2c891c587"
+        "outputId": "f01e6feb-f5ee-48bf-942c-a55c00183a34"
       },
-      "execution_count": 70,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "iZ_3RUUGIljg"
       },
-      "execution_count": 71,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -248,9 +248,9 @@
           "height": 437
         },
         "id": "qq0dBgvCLSSl",
-        "outputId": "8b8e50fc-edb5-4f82-bcb2-f93c62c8d418"
+        "outputId": "f04662d9-8ba4-4f7a-bebd-2705adbc7ecc"
       },
-      "execution_count": 72,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "display_data",
@@ -307,9 +307,9 @@
           "height": 437
         },
         "id": "Qc73vzlbPglq",
-        "outputId": "14094728-8bce-40db-f88f-96cfe6bde62e"
+        "outputId": "73defb6d-6dc6-49b9-8ffe-fa26d7b130ab"
       },
-      "execution_count": 73,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
@@ -378,24 +378,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 437
         },
         "id": "AhKq8RRXPg3C",
-        "outputId": "b95c4794-be30-4162-80e5-48845a7ad502"
+        "outputId": "72c13ce8-f5a1-43fe-b0d2-dfbc342211cf"
       },
-      "execution_count": 74,
+      "execution_count": 83,
       "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "coll\n",
-              "  (-1,0.02] (0.02,0.05]  (0.05,0.1]     (0.1,1] \n",
-              "        252          64          29          29 "
-            ]
-          },
-          "metadata": {}
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -449,9 +438,9 @@
           "height": 437
         },
         "id": "1RWow4cNdNCA",
-        "outputId": "f1af4a15-dccb-4205-ca1d-61d5883293b6"
+        "outputId": "b8cc0be8-ecaa-4d08-8a98-745c29f60a6a"
       },
-      "execution_count": 77,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "display_data",
@@ -503,10 +492,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 437
         },
-        "outputId": "864bb70e-9104-4717-ebac-22dc06b9e235",
+        "outputId": "12700247-4343-4a3f-856e-c5d5a2c19b63",
         "id": "gJ2cL-NtV0Bz"
       },
-      "execution_count": 76,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "display_data",
@@ -524,6 +513,20 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# conclusion\n",
+        "\n",
+        " - It is not enoght to use 2(+1) PCs to visualized the population structure for CEU,MXL,CEU and YRI. \n",
+        " - with 2(+1) PCs some MXL appears to be admixed between CEU(european) and CHB(chinese) \n",
+        " -- However, the correlation of residuals shows that these individual have a bad fit\n",
+        " - Using 3(+1) PCs shows that the MXL indiviudal are modeled using this extra PC and with that extra PC they no longer show a bad fit"
+      ],
+      "metadata": {
+        "id": "1GFvxGm3fdJP"
+      }
     }
   ]
 }
