--- a/evalPCA.ipynb
+++ b/evalPCA.ipynb
@@ -76,7 +76,7 @@
       "source": [
         "\n",
         "#load genetic test data\n",
-        "load(url(\"http://pontus.popgen.dk/albrecht/open/admixTjeck/data.Rdata\"))"
+        "load(url(\"https://popgen.dk/albrecht/open/admixTjeck/data.Rdata\"))"
       ]
     },
     {
