--- a/evalPCA_step_by_step_example_with_Chen&Storey_PCA.ipynb
+++ b/evalPCA_step_by_step_example_with_Chen&Storey_PCA.ipynb
@@ -33,7 +33,7 @@
         "source(\"https://raw.githubusercontent.com/GenisGE/evalAdmix/master/visFuns.R\")\n",
         "\n",
         "#load genetic test data\n",
-        "load(url(\"http://pontus.popgen.dk/albrecht/open/admixTjeck/data.Rdata\"))\n"
+        "load(url(\"https://popgen.dk/albrecht/open/admixTjeck/data.Rdata\"))\n"
       ]
     },
     {
